--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -1,4 +1,5 @@
 ---
+- _aken
 - _ala
 - _ama
 - _asis
@@ -13,14 +14,18 @@
 - _ief
 - _iv
 - _j
+- _most
 - _rage
+- _rg
 - _rmal
 - _teen
 - _tens
 - _thed
 - _tite
+- _tta
 - _ype
 - a_tive
+- ab_d
 - abd_
 - acq_
 - ad_ve
@@ -51,6 +56,8 @@
 - m_ess
 - m_ow
 - ma_in
+- mur_
+- non_l
 - orch_
 - ph_logy
 - ramb_
@@ -58,7 +65,10 @@
 - redu_
 - rejo_
 - seve_
+- stup_
+- th_n
 - tr_ty
+- vers_
 - w_ness
 - we_e
 - wi_ed
