--- a/src/wordset/data/pickup.yml
+++ b/src/wordset/data/pickup.yml
@@ -26,6 +26,7 @@
 - _ilt
 - _kly
 - _llet
+- _llow
 - _lop
 - _lve
 - _mmy
@@ -67,6 +68,7 @@
 - da_r
 - ex_ive
 - i_se
+- p_ch
 - p_it
 - r_el
 - s_tter
