--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -24,6 +24,7 @@
 - _tite
 - _tta
 - _ype
+- a_lity
 - a_tive
 - ab_d
 - abd_
@@ -34,7 +35,9 @@
 - car_g
 - co_vely
 - con_te
+- cr_l
 - cree_
+- cruc_
 - d_ging
 - d_ide
 - d_w
@@ -50,12 +53,15 @@
 - flee_
 - gna_
 - gro_s
+- h_est
 - h_red
+- ha_st
 - ine_e
 - lo_st
 - m_ess
 - m_ow
 - ma_in
+- mar_d
 - mur_
 - non_l
 - orch_
@@ -64,6 +70,7 @@
 - re_tive
 - redu_
 - rejo_
+- rep_y
 - seve_
 - stup_
 - th_n
