--- a/src/wordset/data/pickup.yml
+++ b/src/wordset/data/pickup.yml
@@ -18,6 +18,7 @@
 - _eep
 - _elt
 - _ench
+- _ffle
 - _fire
 - _ggle
 - _ggy
@@ -59,6 +60,7 @@
 - _ump
 - _zy
 - b_el
+- c_sh
 - ch_k
 - comp_n
 - con_ate
