--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -15,6 +15,7 @@
 - _iv
 - _j
 - _most
+- _ogic
 - _rage
 - _rg
 - _rmal
@@ -48,8 +49,10 @@
 - di_te
 - dist_s
 - e_ogy
+- ema_
 - emp_s
 - emph_
+- ende_
 - ex_ve
 - flee_
 - gna_
@@ -62,8 +65,10 @@
 - m_ess
 - m_ow
 - ma_in
+- manu_
 - mar_d
 - mur_
+- na_g
 - non_l
 - orch_
 - ph_logy
@@ -73,6 +78,8 @@
 - rejo_
 - rep_y
 - seve_
+- spo_s
+- spon_
 - stup_
 - th_n
 - tr_ty
