--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -53,8 +53,11 @@
 - emp_s
 - emph_
 - ende_
+- ex_m
 - ex_ve
+- excl_
 - flee_
+- g_ine
 - gna_
 - gro_s
 - h_est
@@ -72,6 +75,7 @@
 - non_l
 - orch_
 - ph_logy
+- prev_
 - ramb_
 - re_tive
 - redu_
