--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -45,6 +45,7 @@
 - day_
 - dee_
 - def_g
+- des_d
 - dete_s
 - di_te
 - dist_s
@@ -64,6 +65,7 @@
 - h_est
 - h_red
 - ha_st
+- hau_
 - ine_e
 - lo_st
 - m_ess
