--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -25,6 +25,7 @@
 - _tite
 - _tta
 - _ype
+- a_b
 - a_lity
 - a_tive
 - ab_d
@@ -33,7 +34,9 @@
 - ad_ve
 - ass_t
 - att_d
+- br_k
 - car_g
+- cla_d
 - co_vely
 - con_te
 - cr_l
@@ -78,6 +81,7 @@
 - non_l
 - orch_
 - ph_logy
+- pos_e
 - prev_
 - ramb_
 - re_tive
