--- a/src/wordset/data/pickup.yml
+++ b/src/wordset/data/pickup.yml
@@ -55,6 +55,7 @@
 - _ssy
 - _take
 - _ttle
+- _uff
 - _ull
 - _ume
 - _ummy
@@ -68,6 +69,7 @@
 - conf_e
 - conf_on
 - cor_l
+- cr_k
 - da_r
 - disp_e
 - ex_ive
