--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -25,7 +25,9 @@
 - _tite
 - _tta
 - _ype
+- a_as
 - a_b
+- a_ide
 - a_lity
 - a_tive
 - ab_d
@@ -67,6 +69,7 @@
 - gna_
 - gro_s
 - h_est
+- h_lly
 - h_red
 - ha_st
 - hau_
@@ -93,6 +96,7 @@
 - spo_s
 - spon_
 - stup_
+- t_ical
 - th_n
 - tr_ty
 - vers_
