--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -82,6 +82,7 @@
 - manu_
 - mar_d
 - mi_nt
+- mi_ter
 - mur_
 - na_g
 - nec_
@@ -102,6 +103,7 @@
 - t_ical
 - th_n
 - tr_ty
+- v_ble
 - vers_
 - w_ness
 - we_e
