--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -11,11 +11,14 @@
 - _ek
 - _elf
 - _emen
+- _ena
+- _ept
 - _ief
 - _iv
 - _j
 - _most
 - _ogic
+- _ool
 - _rage
 - _rg
 - _rmal
@@ -55,12 +58,14 @@
 - dete_s
 - di_te
 - dist_s
+- e_lly
 - e_ogy
 - ema_
 - emb_s
 - emp_s
 - emph_
 - ende_
+- ev_y
 - evan_
 - ex_m
 - ex_ve
@@ -74,6 +79,7 @@
 - h_red
 - ha_st
 - hau_
+- he_ed
 - ine_e
 - lo_st
 - m_ess
