--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -57,6 +57,7 @@
 - des_d
 - dete_s
 - di_te
+- disr_
 - dist_s
 - e_lly
 - e_ogy
@@ -65,6 +66,7 @@
 - emp_s
 - emph_
 - ende_
+- era_
 - ev_y
 - evan_
 - ex_m
