--- a/src/wordset/data/skip.yml
+++ b/src/wordset/data/skip.yml
@@ -83,6 +83,7 @@
 - hau_
 - he_ed
 - ine_e
+- is_e
 - lo_st
 - m_ess
 - m_ow
@@ -105,6 +106,7 @@
 - rejo_
 - rep_y
 - seve_
+- spi_s
 - spo_s
 - spon_
 - stup_
