Update pickup data

--- a/data/pickup.yml
+++ b/data/pickup.yml
@@ -1,4 +1,5 @@
 - _ab
+- _acle
 - _amp
 - _ang
 - _ank
@@ -26,11 +27,13 @@
 - _illa
 - _illy
 - _ilt
+- _inge
 - _kly
 - _llet
 - _llow
 - _lop
 - _lve
+- _mble
 - _mmy
 - _mony
 - _mper
@@ -45,6 +48,7 @@
 - _oss
 - _pple
 - _racy
+- _ray
 - _rch
 - _rl
 - _rp
@@ -58,15 +62,19 @@
 - _uff
 - _ull
 - _ume
-- _ummy
 - _ump
 - _ush
 - _zy
 - b_el
 - c_sh
 - ch_k
+- com_nt
+- com_te
 - comp_n
+- comp_t
 - con_ate
+- con_ence
+- con_ive
 - conf_e
 - conf_on
 - cor_l
@@ -74,9 +82,14 @@
 - da_r
 - disp_e
 - ex_ive
+- f_ent
+- g_ous
 - i_se
+- m_ate
+- o_nce
 - p_ch
 - p_it
+- p_ment
 - r_el
 - s_tter
 - su_ive
