Fix duplications of the first word #5

--- a/data/circles/acc_e.yml
+++ b/data/circles/acc_e.yml
@@ -1,6 +1,5 @@
-- accede
-- accentuate
-- accessorize
+- acceptance
+- acclimate
 - accolade
 - accommodate
 - accomplice
@@ -9,4 +8,5 @@
 - accrue
 - accumulate
 - accurate
+- accusative
 - accuse
