--- a/data/circles/ag_e.yml
+++ b/data/circles/ag_e.yml
@@ -1,4 +1,3 @@
-- agape
 - agate
 - agave
 - agglomerate
@@ -6,6 +5,7 @@
 - aggrandize
 - aggravate
 - aggregate
+- aggressive
 - agile
 - agitate
 - agreeable
