--- a/data/circles/ant_e.yml
+++ b/data/circles/ant_e.yml
@@ -1,4 +1,3 @@
-- antagonize
 - ante
 - antedate
 - antelope
@@ -9,4 +8,5 @@
 - antidote
 - antifreeze
 - antihistamine
+- antihypertensive
 - antique
