--- a/data/circles/da_d.yml
+++ b/data/circles/da_d.yml
@@ -1,4 +1,3 @@
-- dachshund
 - damned
 - dappled
 - darkened
@@ -6,6 +5,7 @@
 - dartboard
 - dashboard
 - dashed
+- dastard
 - dated
 - daybed
 - dazed
