--- a/data/circles/exp_ion.yml
+++ b/data/circles/exp_ion.yml
@@ -1,12 +1,12 @@
-- expectation
+- expansion
+- expatriation
 - expedition
-- expiation
 - expiration
 - explanation
-- explication
 - exploitation
 - exploration
-- exportation
-- exposition
-- expropriation
+- explosion
+- expostulation
+- expression
 - expulsion
+- expurgation
