--- a/data/sentences/_arch.yml
+++ b/data/sentences/_arch.yml
@@ -1,9 +1,15 @@
 source: _arch.yml
 generator: ChatGPT
 --- |
-Please create a short sentence using all these words: arch, cornstarch, frogmarch
-Please create a short sentence using all these words: larch, matriarch, monarch
-Please create a short sentence using all these words: oligarch, parch, patriarch
-Please create a short sentence using all these words: research, search, starch
+Please create a long sentence using all these words: arch, cornstarch, frogmarch
+Please create a long sentence using all these words: larch, matriarch, monarch
+Please create a long sentence using all these words: oligarch, parch, patriarch
+Please create a long sentence using all these words: research, search, starch
 --- |
-@@@
+As the group of protesters frogmarched their way through the streets, they passed by an old cathedral with a grand arch, and one of the demonstrators jokingly suggested that they should use cornstarch instead of flour to make their protest signs more durable.
+
+As the larch trees shed their needles in the autumn, the matriarch of the family reflected on the passing of time and the rise and fall of monarchs throughout history, wondering if the current ruling monarch would be remembered as just a fleeting figure or a true leader in the annals of time.
+
+The oligarch sat in his opulent office, watching as the city below him parch under the scorching sun, feeling a sense of satisfaction as he reflected on how he and his fellow patriarchs of industry controlled the fate of the nation and its people with their immense wealth and power.
+
+As the scientist embarked on a new research project, he searched tirelessly through stacks of papers and journals, looking for any clues or leads that would help him understand the properties of starch and how it could be used in new and innovative ways.
