--- a/data/sentences/_arry.yml
+++ b/data/sentences/_arry.yml
@@ -1,9 +1,15 @@
 source: _arry.yml
 generator: ChatGPT
 --- |
-Please create a short sentence using all these words: harry, intermarry
-Please create a short sentence using all these words: miscarry, parry
-Please create a short sentence using all these words: quarry, remarry
-Please create a short sentence using all these words: starry, tarry
+Please create a long sentence using all these words: intermarry, harry. The word "harry" is not a name of a person.
+Please create a long sentence using all these words: miscarry, parry
+Please create a long sentence using all these words: quarry, remarry
+Please create a long sentence using all these words: starry, tarry
 --- |
-@@@
+As the two neighboring tribes began to intermarry, they discovered that their long-standing feuds and attempts to harry each other were unnecessary and decided to live in peace.
+
+As I tried to parry the blow of my opponent's sword during our fencing match, I felt a sudden cramp in my stomach and realized that I was miscarrying the baby I had been so excited to have.
+
+After years of working in the quarry, my father decided to retire and remarry, and he moved to a small town where he could spend his days fishing and enjoying the company of his new wife.
+
+As we sat under the starry sky and tarry, we watched the shooting stars and made wishes on them, it was a moment I will always cherish and remember.
