--- a/data/sentences/_amer.yml
+++ b/data/sentences/_amer.yml
@@ -12,4 +12,4 @@ The gamer tried to keep a low profile, but his lamer moves gave him away and he 
 
 The roamer wandered through the woods, coming across a clearing where a screamer was frantically reaming a tree with a tool.
 
-The streamer sat in front of her webcam, soothing the wildest of beasts with her gentle voice as she worked to tame them on her live animal training show, which was broadcast via a popular steaming platform.
+The tamer skillfully used the steamer to tame the unruly streamer.
