--- a/data/sentences/_appy.yml
+++ b/data/sentences/_appy.yml
@@ -6,4 +6,10 @@ Please create a short sentence using all these words: nappy, pappy, sappy
 Please create a short sentence using all these words: scrappy, slaphappy, snappy
 Please create a short sentence using all these words: unhappy, yappy, zappy
 --- |
-@@@
+Chappy days are not always happy, sometimes they can be quite crappy.
+
+The nappy old man felt sappy thinking about his beloved Pappy.
+
+The scrappy dog was feeling snappy and slaphappy after his long walk.
+
+The unhappy dog was yapping loudly, his energy level was too zappy for the quiet neighborhood.
