--- a/data/sentences/_apy.yml
+++ b/data/sentences/_apy.yml
@@ -6,4 +6,10 @@ Please create a short sentence using all these words: crapy, cryotherapy, hydrot
 Please create a short sentence using all these words: hypnotherapy, physiotherapy, psychotherapy
 Please create a short sentence using all these words: radiotherapy, soapy, thermotherapy
 --- |
-@@@
+After chemotherapy, she found relief through aromatherapy and bibliotherapy.
+
+The patient's symptoms improved after a few sessions of hydrotherapy and cryotherapy, but the crapy medication didn't seem to have any effect.
+
+He had been going through hypnotherapy, physiotherapy, and psychotherapy to help him cope with his chronic pain.
+
+The radiotherapy left her skin feeling dry and itchy, so she applied soapy lotion and then relaxed in a warm thermotherapy bath.
