--- a/data/sentences/_arer.yml
+++ b/data/sentences/_arer.yml
@@ -1,9 +1,15 @@
 source: _arer.yml
 generator: ChatGPT
 --- |
-Please create a short sentence using all these words: bearer, carer, declarer
-Please create a short sentence using all these words: hearer, pallbearer, parer
-Please create a short sentence using all these words: seafarer, swearer, torchbearer
-Please create a short sentence using all these words: trainbearer, wayfarer, wearer
+Please create a long sentence using all these words: bearer, carer, declarer
+Please create a long sentence using all these words: hearer, pallbearer, parer
+Please create a long sentence using all these words: seafarer, swearer, torchbearer
+Please create a long sentence using all these words: trainbearer, wayfarer, wearer
 --- |
-@@@
+The bearer of the package carefully handed it over to the carer, who then declared that they would make sure it was delivered safely.
+
+As the hearer of the eulogy, the pallbearer stood solemnly at the front of the funeral procession, carefully paring his apple during the service to pass the time.
+
+As the seafarer navigated through the rough waters, he couldn't help but let out a few choice swear words, but as he spotted the torchbearer's signal on the shore, he knew he was nearing the end of his journey.
+
+As the trainbearer made his way through the busy station, he couldn't help but notice the wayfarer, who was clearly a seasoned traveler, wearing a comfortable and well-worn backpack, making his way to catch the next train.
