--- a/data/sentences/_arge.yml
+++ b/data/sentences/_arge.yml
@@ -1,9 +1,15 @@
 source: _arge.yml
 generator: ChatGPT
 --- |
-Please create a short sentence using all these words: barge, charge, countercharge
-Please create a short sentence using all these words: discharge, enlarge, large
-Please create a short sentence using all these words: marge, overcharge, recharge
-Please create a short sentence using all these words: sarge, supercharge, surcharge
+Please create a long sentence using all these words: barge, charge, countercharge
+Please create a long sentence using all these words: discharge, enlarge, large
+Please create a long sentence using all these words: marge, overcharge, recharge
+Please create a long sentence using all these words: sarge, supercharge, surcharge
 --- |
-@@@
+The barge slowly made its way down the river as the captain barked out orders to the crew to charge the engines and prepare for a countercharge against the rival shipping company that had been encroaching on their territory.
+
+After the heavy rain, the river's discharge had significantly increased causing the water to enlarge and overflow its banks, creating a large and dangerous current.
+
+The store clerk was caught marge overcharging customers for the store's products and was fired, but after some time, he decided to recharge his career by opening his own store with fair prices and honest business practices.
+
+The sarge was in charge of training the new recruits, but he realized that they needed something extra to give them an edge in battle, so he decided to supercharge their training regimen by adding a rigorous physical fitness program, but the extra cost incurred a surcharge on the department's budget.
