--- a/data/sentences/_arm.yml
+++ b/data/sentences/_arm.yml
@@ -1,9 +1,15 @@
 source: _arm.yml
 generator: ChatGPT
 --- |
-Please create a short sentence using all these words: charm, disarm, farm
-Please create a short sentence using all these words: firearm, forearm, harm
-Please create a short sentence using all these words: lukewarm, overarm, sidearm
-Please create a short sentence using all these words: swarm, underarm, yardarm
+Please create a long sentence using all these words: charm, disarm, farm
+Please create a long sentence using all these words: firearm, forearm, harm
+Please create a long sentence using all these words: lukewarm, overarm, sidearm
+Please create a long sentence using all these words: swarm, underarm, yardarm
 --- |
-@@@
+The farmer's charm and ability to disarm even the most stubborn of animals helped him to efficiently run his farm.
+
+The criminal aimed the firearm at the store clerk, causing her to freeze in fear as she saw the cold metal of the barrel pressed against her forehead, but just as he was about to pull the trigger, a heroic bystander tackled him, causing the firearm to discharge harmlessly into the air and breaking the criminal's forearm in the process.
+
+The soldier, feeling lukewarm about the upcoming battle, picked up his sidearm and overarm sling, checking the magazine and chamber to make sure his weapon was ready for action.
+
+The sailors on the ship tried to fend off the swarm of bees that was attacking them by swatting at them with their hat, but the bees were relentless and managed to sting many of them, including the captain who got stung on his underarm and the lookout who got stung on his yardarm.
